--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <section class="main-content">
       <h3>
-<a id="welcome-to-snlab" class="anchor" href="#welcome-to-snlab" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to Snlab.</h3>
+<a id="welcome-to-snlab" class="anchor" href="#welcome-to-snlab" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to Snlab!</h3>
 
 <p>This is a perfect point for you to start a journey with <a href="https://wiki.opendaylight.org/view/ALTO:Main">ALTO</a> and <a href="https://wiki.opendaylight.org/view/Project_Proposals:Maple">Maple</a>.</p>
 
