--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Snlab</h1>
+      <h1 class="project-name">SNLab</h1>
       <h2 class="project-tagline"></h2>
     </section>
 
@@ -21,7 +21,7 @@
 
 <p>This is a perfect point for you to start a journey with <a href="https://wiki.opendaylight.org/view/ALTO:Main">ALTO</a> and <a href="https://wiki.opendaylight.org/view/Project_Proposals:Maple">Maple</a>.</p>
 
-</p><p>We now organise the code by [Github](https://github.com/snlab). You may find some repos are private now. Don't worry, walking through the public ones can give you basic sense of what we are doing. If you want to explore more, try contacting us to find if we can together enlighten seductive sparkles! </p>
+</p><p>We now organise the code by <a href="https://github.com/snlab">Github</a>. You may find some repos are private now. Don't worry, walking through the public ones can give you basic sense of what we are doing. If you want to explore more, try contacting us to find if we can together enlighten seductive sparkles! </p>
 
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
