--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
+    <link href='https://fonts.googleapis.com/css?family=Rock+Salt' rel='stylesheet' type='text/css'>
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">SNLab</h1>
+      <h1 class="project-name" font-family: 'Rock Salt', cursive;>SNLab</h1>
       <h2 class="project-tagline"></h2>
     </section>
 
