--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
 
-<p>Having trouble with the project? Or do you want to join us? Please contact: If you have some problems or strongly want to join us, please contact: <a href="mailto:yry@cs.yale.edu">yry@cs.yale.edu</a></p>
+<p>Having trouble with the project? Or do you want to join us? Please contact: <a href="mailto:yry@cs.yale.edu">yry@cs.yale.edu</a></p>
 
       <footer class="site-footer">
 
