--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 				    
 				    
 				    <span class="site-title">SNLab</span>
-				    <span class="site-subtitle">Freedom</span>
+				    <span class="site-subtitle"></span>
 			    </a>
 		    </h1>
 	    </div>
