add weekly meeting

--- a/index.html
+++ b/index.html
@@ -71,16 +71,16 @@
 
   
   <li>
-    <a href="">
+    <a href="/weekly-meeting">
       
-      Projects
+      Weekly Meeting
     </a>
   </li>
   
 
   
   <li>
-    <a href="/paper-study">
+    <a href="/weekly-meeting">
       
       Paper Study
     </a>
