--- a/about/index.html
+++ b/about/index.html
@@ -154,25 +154,42 @@
              <h2 id="subtitle">About</h2>
              <p><br/></p>
 
-<p>Postdoc Positions at SNLab at Tongji-Yale Center of Advanced Networks and Networked Systems</p>
+             <p>同济-耶鲁联合网络实验室SNLab（坐标：电信学院219）正在招收研究生！</p>
 
-<p>Founded by Professor Y. Richard Yang <a href="http://www.cs.yale.edu/homes/yry/">http://www.cs.yale.edu/homes/yry/</a> in the summer of 2014, and hosted in the Institute of Advanced Studies at Tongji University, the Systems Networking Lab (SNLab) will provide astimulating, world-class environment for the advancement of both theory and systems of networks and networked systems.</p>
+             <p>实验室由杨阳（Y. Richard Yang）教授领导，主要从事下一代互联网架构及网络相关系统的研究。实验室自2015年创办以来，已在 IWQOS、ICDCS、DSC、INFOCOM、SIGCOMM 等计算机网络领域顶级会议上发表过多篇论文，并成功在开源网络操作系统 OpenDaylight 峰会和超级计算大会 SuperComputing 上进行过成果展示，以及 IETF 网络标准会议上主导多篇协议草案。实验室已培养多位成员赴 Yale、USC、NYU
+             等美国高校深造，或进入
+             Google、Facebook、华为等知名IT企业工作。在这里，你将有机会与来自 Caltech、ESNet、IBM、UCL 等国际组织的顶尖学者共同探讨学术问题，或与来自华为、腾讯等 IT 大厂的网络专家们探索工程实践的难题。我们期待更多有实力并对计算机网络与系统研究感兴趣的同学加入我们的团队！</p>
 
-<p>With continued development and wide deployment of advanced, transformative networks and systems techniques, such as software defined networks, Internet of things, 5G networks, mobile networks, network function virtualization, and Cloud computing, networks and networked systems remain an exciting, dynamic field that new ideas continue to emerge and new systems continue to be developed and deployed.</p>
+             <p><strong>主要面向对象：</strong>数学、计算机及软件专业即将升入大四的本科生</p>
 
-<p><strong>Prof. Y. Richard Yang（杨阳）</strong></p>
+             <p>实验室对招生无具体要求。只要你认为自己实力够强，并对计算机网络与系统研究感兴趣，均可投递简历至 <a href="mailto:snlab.org@gmail.com">snlab.org@gmail.com</a>。我们期待你的加入！</p>
 
-<table><tbody style="box-sizing: border-box;"><tr class="firstRow" style="box-sizing: border-box;"><td valign="top" style="box-sizing: border-box; padding: 0px; border: 1px solid rgb(221, 221, 221);"><img src="/images/about/picture1_yy.png" title="Yang Richard Yang" alt="Yang Richard Yang" style="box-sizing: border-box; border: 0px; vertical-align: middle;"></td><td valign="top" style="box-sizing: border-box; padding: 0px; word-break: break-all; border: 1px solid rgb(221, 221, 221);"><p style="box-sizing: border-box; margin-bottom: 10px;">美国耶鲁大学终身正教授及同济大学教授。主要从事下一代互联网体系结构、SDN编程、互联网内容分发、网络流量优化和云计算等领域的研究。</p><p style="box-sizing: border-box; margin-bottom: 10px;"><br style="box-sizing: border-box;"></p><p style="box-sizing: border-box; margin-bottom: 10px;">报告题目：SDN概述</p></td></tr></tbody></table>
-
-<p>Dr. Y. Richard Yang is a Professor of Computer Science at Yale, where he founded and leads the Laboratory of Networked Systems (LANS). He is also a professor at Tongji University, where he leads the SNLab. Prof. Yang&rsquo;s current research focus is on new computer network architectures, SDN programming, content distribution networks, and network-application interactions. He has published more than 10 papers in ACM SIGCOMM, the flagship conference on networking; among which 4 were nominated as best papers. His team proposed the framework of P4P for network-application interactions, which is adopted by IETF by forming the ALTO Working Group, which has defined the ALTO Protocol. His work has been implemented/adopted in products/systems of major companies (e.g., AT&amp;T, Alcatel-Lucent, Cisco, Microsoft, PPLive, Youku), and featured in mainstream media including Economist, Forbes, Guardian, Chronicle of Higher Education, Information Week, MIT Technology Review, Science Daily, USA Today, Washington Post, and Wired, among others. His awards include a CAREER Award from the National Science Foundation and a Schlumberger Foundation Award. Dr. Yang&rsquo;s received his B.E. degree in Computer Science and Technology from Tsinghua University (1993), and his M.S. and Ph.D. degrees in Computer Science from the University of Texas at Austin (1998 and 2001).</p>
+             <p>以下为杨阳教授中文简历：</p>
 
 <p><img src="/images/about/picture2_yy.png" style="width: 142px" title="Yang Richard Yang" /></p>
 
 <p><strong>Biography:</strong></p>
 
-<p>Richard Yang is a Professor of Computer Science at Yale, where he founded and leads the Laboratory of Networked Systems (LANS). He is also a professor at Tongji University, where he leads the SNLab. Prof. Yang’s current research focus is on new computer network architectures, SDN programming, content distribution networks, and network-application interactions. He has published more than 10 papers in ACM SIGCOMM, the flagship conference on networking; among which 4 were nominated as best papers. His team proposed the framework of P4P for network-application interactions, which is adopted by IETF by forming the ALTO Working Group, which has defined the ALTO Protocol. His work has been implemented/adopted in products/systems of major companies (e.g., AT&amp;T, Alcatel-Lucent, Cisco, Microsoft, PPLive, Youku), and featured in mainstream media including Economist, Forbes, Guardian, Chronicle of Higher Education, Information Week, MIT Technology Review, Science Daily, USA Today, Washington Post, and Wired, among others. His awards include a CAREER Award from the National Science Foundation and a Schlumberger Foundation Award. Dr. Yang’s received his B.E. degree in Computer Science and Technology from Tsinghua University (1993), and his M.S. and Ph.D. degrees in Computer Science from the University of Texas at Austin (1998 and 2001).</p>
+<p>杨阳，现任美国耶鲁大学终身正教授（Tenure）,国家特聘（千人）教授（同济），Tsinghua EMC Chaired Professor Group, Director of Undergraduate Studies (Yale), Director of Tongji-Yale Advanced Systems Center。在计算机互联网络领域中是迄今为止唯一在美国长春藤高校联盟中获得终身正教席的华人教授。谷歌学者(Google Scholar)收集论文总引用超24,000次，单篇论文最高引用次数为1567次，h-index达59。在国际互联网络领域最具影响力的顶级会议ACM
+SIGCOMM上，从2001年至今发表论文13篇，其中4篇获SIGCOMM最优论文提名，始终位于世界学者前列。</p>
 
-<p>杨阳，博士，2014 年第十批中国千人计划国家特聘专家, 现为耶鲁大学终身正教授，同济大学计算机系教授、博士生导师。1993 年获得清华大学计算机工程与技术学士学位，1998 和2001 分别从美国Austin 大学获得硕士和博士学位。主要从事下一代互联网体系结构、SDN 编程、互联网内容分发、网络流量优化和云计算等领域的研究。他曾担任耶鲁大网络系统实验主任，他先后获得美国国家科学基金会National Science Foundation 和Schlumberger Foundation 基金奖。他一直坚持理论研究，国际标准，与实际系统相结合的学术风格。从2001年至今在国际计算机网络领域最具影响力的国际顶级会议ACMSIGCOMM上发表论文11 篇，其中4 篇获SIGCOMM最优论文提名，始终位于全球前列; 他的团队提出的P4P 概念被国际互联网标准组织(IETF)采用并成立IETF ALTO 工作组，成为互联网标准ALTO 协议的基础；他所领导的Maple SDN 编程语言获ACM SIGCOMM 2013最优论文提名，2014 Google 研究奖励（2014 Google Faculty Research Award)， 及美国国家自然基金（NSF）部署支持（2014 NSF CCIIE Award）; 他的团队所设计的多个网络系统与算法在商业系统（如思科，阿朗，谷歌，微软，百度，Youku 等的产品）中实现并部署; 他的研究被主流媒体如Economist, Forbes, Guardian, Chronicle of Higher Education, Information Week, MIT Technology Review, Science Daily, USA Today, Washington Post, and Wired 等报道。</p>
+<p>杨阳教授的学术研究始于清华大学计算机系。他以新生入学数学选拔考试第一名入选清华因才施教生序列，以优异成绩作为优秀毕业生毕业，1993年被免试推荐攻读博士学位。 1996年获全额奖学金资助在全美计算机学科排名前十的德州大学奥斯丁分校（The University of Texas at Austin ）攻读博士学位并于2001年获计算机科学博士学位。自2001年起至今，在耶鲁大学计算机系任教，曾荣获2003年美国国家自然科学基金会杰出青年教授奖（NSF Career Award），
+2005年破格晋升为耶鲁计算机系副教授，以及电子工程系副教授，2009年获耶鲁终身教授（Tenure）席位，2013年四月以耶鲁计算机系全系全票通过正教授评审。2010年被清华大学兼聘为海外讲席教授组（EMC Chaired Professor Group）成员。2013年免面试入选国家千人计划专家。</p>
+
+<p>杨阳教授的研究领域跨越下一代互联网体系结构、软件定义网络、网络流量优化、互联网内容分发和云计算等多个重要领域，解决了多个互联网络所面临的基本理论挑战。杨阳教授坚持理论研究，国际标准，与网络应用相结合的学术风格。他是国际计算机网络领域中当前唯一一个既能够在顶级学术会议ACM
+SIGCOMM长期发表学术论文，同时又能在国际互联网标准组织(IETF)担当协议制定的学者。他所首创的P4P概念在国际互联网标准ALTO中得到采用，所提出的多个算法为多个全球最大的互联网设备与软件商（例如思科，华为，谷歌），互联网运行商（例如美国最大的Verizon，Comcast,欧洲最大的Telefonica,中国电信）采用或测试。当他受邀作为微软兼职研究员期间，他也参与了微软下一代操作系统Windows 8、 微软云计算Microsoft Azure等核心产品的设计和关键技术研发。</p>
+
+<p>具体在下一代互联网体系结构研究上，他领导、设计和实现的P4P架构提出了全新的网络与应用接口的概念，弥补了现有互联网架构应用与网络无有效沟通的基本缺陷，对下一代互联网体系结构产生了深远影响。P4P使用优化理论的对偶解合(Primal-Dual Decomposition)做为理论基础，提出了我的互联网（My-Internet)，PID等全新网络拓扑概念来设计新的互联网网络与应用接口。其理论结果发表于计算机网络领域最具影响力的会议ACM SIGCOMM 2008.
+P4P设计为福布斯、商业周刊、华盛顿邮报、英国经济人、卫报等权威媒体报道，并被美国联邦通讯委员会（FCC）引用。P4P在全球最大的六个运行商(AT&amp;T, Bell Canada, Comcast, ChinaTelecom, Telefonica, Verizon)中得到成功测试和部署。基于P4P的ALTO互联网国际标准协议得到思科，谷歌等强力支持， 并被Google, Cisco, Juniper, Alcatel-Lucent， Telefonica, 中国电信等著名公司实现。扩充为QoSaaS架构，P4P理念也为微软的Lync所使用。</p>
+
+<p>在软件定义网络方向上，他所领导的Maple SDN编程语言获ACM SIGCOMM 2013最优论文提名，Trident理论结果发表于计算机网络国际顶级会议ACM SIGCOMM 2018. 其成果入选Open Network Summit最佳技术（Top 5 Technologies），2014 Google 研究奖（2014 Google Faculty Research Award），最大软件定义网络操作系统OpenDaylight领先技术，美国国家自然基金（NSF）部署奖（2014 NSF CC＊IIE
+Award），以及美国陆军与英国ITA项目十年支持（2017-2026）。</p>
+
+<p>在网络流量优化领域上，杨阳教授研发的TORTE系统取得多个世界首创的理论突破，并在实际产品中得到应用。TORTE首创COPE (Common-Case Optimization with Penalty Optimization)原则，解决了网络面临的难以兼顾流量优化与可靠性的基本矛盾。COPE采用对偶理论来消除无限个约束变量。其理论结果发表于计算机网络领域最具影响力的会议ACM SIGCOMM 2006， 其实际算法被美国最大的网络运营商AT&amp;T和世界最大的搜索公司Google采用。TORTE提出了首创的多址优化算法（Multihoming
+Optimization），成功解决了基础费用与质量优化之间的矛盾。TORTE的多址优化算法利用实际的互联网付费模型(p-percentile)来设计巧妙的优化原则，从而得到高效的算法。其理论结果发表在计算机网络领域最具影响力的会议ACM SIGCOMM 2004，实际算法被众多网络核心产品采用，如被思科（Cisco）IER所采用。TORTE首次提出了R3(Resilient Routing Reconfiguration)的新理念。 R3是第一个融入了流量工程策略的路由系统，可有效解决拓扑失败、流量抖动以及服务质量难以保障的难题。R3理论结果发表于计算机网络国际顶级会议ACM SIGCOMM
+2010.</p>
+
+<p>在互联网内容分发与流媒体方面，杨阳教授领导的团队与中国最大的P2P视频门户PPLive合作，提出新颖的ShadowStream技术，解决了大规模流媒体服务难以测试的挑战. ShadowStream巧妙地利用已有的实际系统（Production System），让测试与实际系统并行，利用计算机求解与验证的基本非对称性(例如NP-Hard)来结合测试与实际系统。在互联网内容分发网络方面，他提出新颖的CMO(Content Multihoming Optimization)技术，领导解决了内容分发网络中如何有效降低成本与优化服务质量的基本难题。相关成果均发表在ACM SIGCOMM 2012。</p>
 
            </div>
          </div>
